fixed text visibility issues and also added personalised greeting

--- a/override.css
+++ b/override.css
@@ -17,7 +17,8 @@ body{
     text-align: center;
     color: white;
     font-weight: 500;
-    margin-bottom: 0
+    margin-bottom: 0;
+    z-index:1;
 }
 
 #date{
@@ -27,6 +28,7 @@ body{
     font-weight: 700;
     font-size: 5em;
     margin-top: 0;
+    z-index:1;
 }
 
 #quoteblock{
@@ -36,6 +38,7 @@ body{
     font-weight: 700;
     font-size: 5vh;
     margin-top: 0;
+    z-index:1;
 }
 
  #author{
@@ -45,6 +48,7 @@ body{
     font-weight: 700;
     font-size: 3vh;
     margin-top: 0;
+    z-index:1;
 }
 
 #background-credits>a,#background-credits>span:nth-child(2), #background-credits>span:nth-child(2)>a{
@@ -83,4 +87,32 @@ body{
 #weather-location{
     font-size: 1.25em;
     margin-top: 0;
+}
+
+#visibilty-box{
+    position:absolute;
+    z-index:-1;
+    top:0;
+    bottom:0;
+    left:0;
+    right:0;
+    margin:auto;
+    width:100vmax;
+    background-color: black;
+    opacity:0.20;
+
+
+}
+
+
+
+#personalised-greeting{
+    font-family: Arial, Helvetica, sans-serif;
+    position:absolute;
+    top:1vh;
+    left:1vh;
+    width:15vh;
+    text-align: center;
+    color: white;
+    z-index:1;
 }
